Feature section designed.

--- a/Code/DahitanGhar/Client/src/app/home/features/features.component.css
+++ b/Code/DahitanGhar/Client/src/app/home/features/features.component.css
@@ -4,11 +4,20 @@
      display: grid;
      gap: var(--space-xxl);
      align-items: center;
+ }
+
+ .grid-template-area-ltr {
      grid-template-areas:
          "feature-content feature-visual";
      /* default (side by side) */
      grid-template-columns: 1fr 1fr;
+ }
 
+ .grid-template-area-rtl {
+     grid-template-areas:
+         "feature-visual feature-content";
+     /* default (side by side) */
+     grid-template-columns: 1fr 1fr;
  }
 
  .feature-content {
@@ -35,14 +44,14 @@
 
  .feature-visual {
      grid-area: feature-visual;
- }
-
- .feature-visual img {
-     height: 400px;
-     border-radius: var(--radius-lg);
      display: flex;
      align-items: center;
      justify-content: center;
+ }
+
+ .feature-visual img {
+     max-width: 100%;
+     border-radius: var(--radius-lg);
      color: var(--white);
      font-size: 2rem;
      font-weight: bold;
@@ -60,10 +69,10 @@
              "feature-content";
          grid-template-columns: 1fr;
          grid-template-rows: auto auto;
+         row-gap: 15px;
      }
 
-     .feature-visual {
-         display: flex;
-         align-items: center;
+     .feature-content {
+         padding: 0px var(--space-xl)
      }
  }
