--- a/Code/DahitanGhar/Client/src/app/home/features/features.component.html
+++ b/Code/DahitanGhar/Client/src/app/home/features/features.component.html
@@ -1,13 +1,12 @@
-<div class="feature-block">
+<div class="feature-block" [ngClass]="templateStyle == 'ltr' ? 'grid-template-area-ltr':'grid-template-area-rtl'">
     <div class="feature-content">
-        <h2 class="feature-title">Traditional Cuisine</h2>
+        <h2 class="feature-title">{{title}}</h2>
         <p class="feature-text">
-            Experience the authentic flavors of Tharu community with our traditional dishes prepared using age-old
-            recipes and local ingredients.
+            {{description}}
         </p>
         <button href="#" class="btn-golden-md">View Menu</button>
     </div>
     <div class="feature-visual">
-        <img src="Caurosal/img1.jpg" alt="cusines">
+        <img [src]="imgPath" alt="cusines">
     </div>
 </div>
