Reservation and Footer section

--- a/Code/DahitanGhar/Client/src/app/app.component.html
+++ b/Code/DahitanGhar/Client/src/app/app.component.html
@@ -18,8 +18,6 @@
     </main>
 
     <footer class="footer">
-        <div>
-            <span>This is footer</span>
-        </div>
+        <footer-section></footer-section>
     </footer>
 </div>
