--- a/Code/DahitanGhar/Client/src/app/home/home.component.html
+++ b/Code/DahitanGhar/Client/src/app/home/home.component.html
@@ -32,7 +32,7 @@
         <div class="section-service-cards">
             <div>
                 <service-card cardIconPath="icons/forkKnief.png" cardTitle="Authentic Restaurant"
-                    cardDescription="Traditional Tharu cuisine with dishes like Dhikri, Bagiya, and local fish curry prepared with authentic recipes.">
+                    cardDescription="Traditional Tharu cuisine with dishes like Dhikri, Bariya, and local fish curry prepared with authentic recipes.">
                 </service-card>
             </div>
             <div>
@@ -71,5 +71,10 @@
         </div>
     </section>
 
+
+    <!-- Reservation From section -->
+    <section class="ele-container booking-section">
+        <reservation></reservation>
+    </section>
 
 </div>
