--- a/Code/DahitanGhar/Client/src/app/footer/footer.component.html
+++ b/Code/DahitanGhar/Client/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<div class="footer">
     <div class="footer-container">
         <div class="footer-column">
             <h6>Contact</h6>
@@ -25,3 +25,4 @@
             <p><a href="#">Event Planning</a></p>
         </div>
     </div>
+</div>
